# app-service-a2a-travel-agent

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  azure.yaml  debug_imports.py  gunicorn.conf.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_auth.py  web.config
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/core/ai/: cognitiveservices.bicep
infra/core/host/: appservice.bicep
infra/core/security/: roleassignment.bicep
src/agent/: a2a_server.py  agent_executor.py  basic_travel_agent.py  custom_azure_openai.py  travel_agent.py
src/api/: chat.py  test_auth.py
static/css/: style.css
static/js/: chat.js
templates/: index.html
tests/: __init__.py  conftest.py  test_main.py
